MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Payment_Hold_By__c.field-meta.xml
<CustomField>
    <fullName>Payment_Hold_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Hold By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Payment Hold Units</relationshipLabel>
    <relationshipName>Payment_Hold_Units</relationshipName>
    <type>Lookup</type>
</CustomField>