MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Payment_Hold_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Payment_Hold_Expiry__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Hold Expiry</label>
    <type>DateTime</type>
</CustomField>