MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Payment_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Payment_In_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment In Progress</label>
    <type>Checkbox</type>
</CustomField>