MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Plot_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Plot_Attribute__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plot Attribute</label>
    <length>255</length>
    <type>Text</type>
</CustomField>