MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Plot_Id_DMP__c.field-meta.xml
<CustomField>
    <fullName>Plot_Id_DMP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plot Id DMP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>