MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/PlotAreasqm__c.field-meta.xml
<CustomField>
    <fullName>PlotAreasqm__c</fullName>
    <label>Plot Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>