MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/PlotConstructionStatus__c.field-meta.xml
<CustomField>
    <fullName>PlotConstructionStatus__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plot Construction Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>