MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/PlotNo__c.field-meta.xml
<CustomField>
    <fullName>PlotNo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plot No</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>