MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/PlotStatus__c.field-meta.xml
<CustomField>
    <fullName>PlotStatus__c</fullName>
    <label>Plot Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Handed Over</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>