MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Project_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Launch_Date__c</fullName>
    <description>Project Launch Date</description>
    <formula>Phase__r.Project__r.Launch_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Launch Date</label>
    <type>Date</type>
</CustomField>