MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/RejectionComment__c.field-meta.xml
<CustomField>
    <fullName>RejectionComment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rejection Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>