MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Report_Unit_Status__c.field-meta.xml
<CustomField>
    <fullName>Report_Unit_Status__c</fullName>
    <description>Displays the unit status, showing “UnReleased” if the original Status field is blank. Used for consistent reporting when status data may be incomplete.</description>
    <formula>IF(
    ISBLANK(TEXT(Status__c)),
    &quot;UnReleased&quot;,
    TEXT(Status__c)
)</formula>
    <label>Report Unit Status</label>
    <type>Text</type>
</CustomField>