MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Reported_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Reported_Unit_Price__c</fullName>
    <description>Displays Unit Sold Price when available; otherwise shows Base Price (Total Price) until a unit is sold.</description>
    <formula>IF(
  ISBLANK(Unit_Sold_Price__c),
  TotalPrice__c,
  Unit_Sold_Price__c
)</formula>
    <label>Reported Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>