MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Sakneen_Status__c.field-meta.xml
<CustomField>
    <fullName>Sakneen_Status__c</fullName>
    <label>Sakneen Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Sync</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>