MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/SharepointLayoutLink__c.field-meta.xml
<CustomField>
    <fullName>SharepointLayoutLink__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sharepoint Layout Link</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>