MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/SR_Progress__c.field-meta.xml
<CustomField>
    <fullName>SR_Progress__c</fullName>
    <label>SR Progress</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unit QA</fullName>
            </value>
            <value>
                <fullName>Home Preview</fullName>
            </value>
            <value>
                <fullName>Mortgage</fullName>
            </value>
            <value>
                <fullName>Unit Handover</fullName>
            </value>
            <value>
                <fullName>HandOver Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>