MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Unit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>CCMD</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>UnReleased</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
                <isActive>false</isActive>
                <label>Blocked</label>
            </value>
            <value>
                <fullName>Booked</fullName>
                <isActive>false</isActive>
                <label>Booked</label>
            </value>
            <value>
                <fullName>Booking cancelled</fullName>
                <isActive>false</isActive>
                <label>Booking cancelled</label>
            </value>
            <value>
                <fullName>Booking confirmed</fullName>
                <isActive>false</isActive>
                <label>Booking confirmed</label>
            </value>
            <value>
                <fullName>Booking in progress</fullName>
                <isActive>false</isActive>
                <label>Booking in progress</label>
            </value>
            <value>
                <fullName>Draft</fullName>
                <isActive>false</isActive>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Leased</fullName>
                <isActive>false</isActive>
                <label>Leased</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>