MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Status_Change_Time__c.field-meta.xml
<CustomField>
    <fullName>Status_Change_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status Change Time</label>
    <type>DateTime</type>
</CustomField>