MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/StudyRoom__c.field-meta.xml
<CustomField>
    <fullName>StudyRoom__c</fullName>
    <label>Study Room</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>