MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Un-Assigned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>