MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/SyncStatus3DS__c.field-meta.xml
<CustomField>
    <fullName>SyncStatus3DS__c</fullName>
    <label>Sync Status 3DS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>