MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Terrace_Area_in_Words_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Terrace_Area_in_Words_Arabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Terrace Area in Words Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>