MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/TerraceArea__c.field-meta.xml
<CustomField>
    <fullName>TerraceArea__c</fullName>
    <label>Terrace Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>