MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/TotalArea__c.field-meta.xml
<CustomField>
    <fullName>TotalArea__c</fullName>
    <label>Total Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>