MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/TotalGFAsqm__c.field-meta.xml
<CustomField>
    <fullName>TotalGFAsqm__c</fullName>
    <label>Ground Floor Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>