MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/TotalPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalPrice__c</fullName>
    <formula>IF(NOT(ISNULL(AdditionalPrice__c )), BasePrice__c + AdditionalPrice__c, BasePrice__c)</formula>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>