MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/UAE_Citizen_Price__c.field-meta.xml
<CustomField>
    <fullName>UAE_Citizen_Price__c</fullName>
    <label>UAE Citizen Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>