MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/UAE_National_Price__c.field-meta.xml
<CustomField>
    <fullName>UAE_National_Price__c</fullName>
    <label>UAE National Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>