MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Under_Mortgage__c.field-meta.xml
<CustomField>
    <fullName>Under_Mortgage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Under Mortgage</label>
    <type>Checkbox</type>
</CustomField>