MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Unified_Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Unified_Project_Number__c</fullName>
    <formula>Phase__r.UnifiedProjectNumber__c</formula>
    <label>Unified Project Number</label>
    <type>Text</type>
</CustomField>