MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Unit_Defaulted__c.field-meta.xml
<CustomField>
    <fullName>Unit_Defaulted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unit Defaulted</label>
    <type>Checkbox</type>
</CustomField>