MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Unit_Image_Id__c.field-meta.xml
<CustomField>
    <fullName>Unit_Image_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unit Image Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>