MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Unit_Image_Name_pc__c.field-meta.xml
<CustomField>
    <fullName>Unit_Image_Name_pc__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unit Image Name pc</label>
    <length>80</length>
    <type>Text</type>
</CustomField>