MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Unit_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Unit_Image_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unit Image URL</label>
    <type>Url</type>
</CustomField>