MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Unit_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Unit_Launch_Date__c</fullName>
    <description>Represents the official launch date of a unit. Used to track unit launches by year, compare against sales data, evaluate sales performance over time, and identify units that remain unsold after launch.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Unit Launch Date</label>
    <type>Date</type>
</CustomField>