MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Unit_Quality__c.field-meta.xml
<CustomField>
    <fullName>Unit_Quality__c</fullName>
    <description>This field is used to store the quality of Unit.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Unit Quality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>