MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Unit_Sale_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Sale_Type__c</fullName>
    <description>Unit Sale type determines the visibility of the unit to the internal team and brokers.</description>
    <label>Unit Sale Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Indirect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>