MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Unit_Service_Charge__c.field-meta.xml
<CustomField>
    <fullName>Unit_Service_Charge__c</fullName>
    <formula>IF(
    TEXT(UnitFeature__c) = &apos;No Pontoon&apos;,
    5.60,
    IF(
        TEXT(UnitFeature__c) = &apos;Shared Pontoon&apos;,
        8.32,
        IF(
            TEXT(UnitFeature__c) = &apos;Exclusive Pontoon&apos;,
            8.58,
            0
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Service Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>