MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Unit_Sold_By__c.field-meta.xml
<CustomField>
    <fullName>Unit_Sold_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit Sold By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Units2</relationshipName>
    <type>Lookup</type>
</CustomField>