MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Unit_Sold_Date__c.field-meta.xml
<CustomField>
    <fullName>Unit_Sold_Date__c</fullName>
    <description>This used for the report</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Unit Sold Date</label>
    <type>Date</type>
</CustomField>