MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Unit_Sold_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Sold_Price__c</fullName>
    <description>The price at which a unit is sold, representing the total amount from the Sales Order, based on the unit option selected</description>
    <label>Unit Sold Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>