MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/UnitClassification__c.field-meta.xml
<CustomField>
    <fullName>UnitClassification__c</fullName>
    <label>Unit Classification</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Villa</fullName>
            </value>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Townhouse</fullName>
            </value>
            <value>
                <fullName>Plot</fullName>
            </value>
            <value>
                <fullName>Duplex</fullName>
            </value>
            <value>
                <fullName>Mansion</fullName>
            </value>
            <value>
                <fullName>Mega Mansion</fullName>
            </value>
            <value>
                <fullName>Show Villa</fullName>
                <isActive>false</isActive>
                <label>Show Villa</label>
            </value>
            <value>
                <fullName>Townhouse - End Unit</fullName>
                <isActive>false</isActive>
                <label>Townhouse - End Unit</label>
            </value>
            <value>
                <fullName>Townhouse - Mid Unit</fullName>
                <isActive>false</isActive>
                <label>Townhouse - Mid Unit</label>
            </value>
            <value>
                <fullName>Triplex</fullName>
                <isActive>false</isActive>
                <label>Triplex</label>
            </value>
            <value>
                <fullName>Villa/Townhouse</fullName>
                <isActive>false</isActive>
                <label>Villa/Townhouse</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>