MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/UnitCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>UnitCustomerNumber__c</fullName>
    <formula>Opportunity__r.Account.Customer_Number__c</formula>
    <label>Unit Customer Number</label>
    <type>Text</type>
</CustomField>