MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/UnitFeature__c.field-meta.xml
<CustomField>
    <fullName>UnitFeature__c</fullName>
    <label>Unit Feature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Pontoon</fullName>
            </value>
            <value>
                <fullName>Shared Pontoon</fullName>
            </value>
            <value>
                <fullName>Exclusive Pontoon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>