MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/UnitLocation__c.field-meta.xml
<CustomField>
    <fullName>UnitLocation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unit Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>