MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/UnitUsageType__c.field-meta.xml
<CustomField>
    <fullName>UnitUsageType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unit Usage Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>