MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/View__c.field-meta.xml
<CustomField>
    <fullName>View__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>View</label>
    <length>80</length>
    <type>Text</type>
</CustomField>