MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Visible_to_MRE_SalesTeam__c.field-meta.xml
<CustomField>
    <fullName>Visible_to_MRE_SalesTeam__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible to MRE Sales Team</label>
    <type>Checkbox</type>
</CustomField>