MODON MRE BPDEV/force-app/main/default/objects/Unit__c/validationRules/Prevent_Status_hange_From_Sold_Reserved.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Status_hange_From_Sold_Reserved</fullName>
    <active>true</active>
    <description>Prevent_Status_hange_From_Sold_Reserved</description>
    <errorConditionFormula>AND(
    NOT(ISPICKVAL(Source_Entity__c, &apos;Modon - Egypt&apos;)),
    OR(
        ISPICKVAL(PRIORVALUE(Status__c), &apos;Sold&apos;),
        ISPICKVAL(PRIORVALUE(Status__c), &apos;Reserved&apos;)
    ),
    ISPICKVAL(Status__c, &apos;Available&apos;)
)</errorConditionFormula>
    <errorMessage>Unit Status cannot be changed to Available when current status is Sold or Reserved.</errorMessage>
</ValidationRule>