MODON MRE BPDEV/force-app/main/default/objects/Unit__c/listViews/Abu_Dhabi_Broker_Unit.listView-meta.xml
<ListView>
    <fullName>Abu_Dhabi_Broker_Unit</fullName>
    <filterScope>Queue</filterScope>
    <label>Abu Dhabi ( Broker )</label>
    <queue>Abu_Dhabi_Broker</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>