MODON MRE BPDEV/force-app/main/default/objects/Unit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>PlotNo__c</columns>
    <columns>UnitClassification__c</columns>
    <columns>GrossFloorAreaGFA__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source_Entity__c</field>
        <operation>equals</operation>
        <value>Modon - Egypt</value>
    </filters>
    <label>All</label>
</ListView>