MODON MRE BPDEV/force-app/main/default/objects/Unit__c/listViews/All_Egypt_Units.listView-meta.xml
<ListView>
    <fullName>All_Egypt_Units</fullName>
    <columns>NAME</columns>
    <columns>ApprovalStatus__c</columns>
    <columns>Status__c</columns>
    <columns>Sub_Status__c</columns>
    <columns>BlockedFor__c</columns>
    <columns>BlockedBy__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source_Entity__c</field>
        <operation>equals</operation>
        <value>Modon - Egypt</value>
    </filters>
    <label>All Egypt Units</label>
    <sharedTo>
        <role>Modon_Egypt_Head_of_Sales_Operations</role>
    </sharedTo>
</ListView>