MODON MRE BPDEV/force-app/main/default/objects/Unit__c/listViews/All_No_Filters.listView-meta.xml
<ListView>
    <fullName>All_No_Filters</fullName>
    <columns>NAME</columns>
    <columns>Phase__c</columns>
    <columns>Project_Name__c</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>notEqual</operation>
    </filters>
    <label>All - No Filters</label>
</ListView>