MODON MRE BPDEV/force-app/main/default/objects/Unit__c/listViews/Available_Units.listView-meta.xml
<ListView>
    <fullName>Available_Units</fullName>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>UnitClassification__c</columns>
    <columns>View__c</columns>
    <columns>Number_of_Bedrooms__c</columns>
    <columns>Status__c</columns>
    <columns>PlotAreasqm__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Available</value>
    </filters>
    <filters>
        <field>Sub_Status__c</field>
        <operation>equals</operation>
        <value>Un-Assigned</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>Test</value>
    </filters>
    <label>Available Units</label>
</ListView>