MODON MRE BPDEV/force-app/main/default/objects/Unit__c/listViews/Direct_Unit.listView-meta.xml
<ListView>
    <fullName>Direct_Unit</fullName>
    <filterScope>Queue</filterScope>
    <label>Direct</label>
    <queue>Direct</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>