MODON MRE BPDEV/force-app/main/default/objects/Unit__c/listViews/Dubai_Broker_Unit.listView-meta.xml
<ListView>
    <fullName>Dubai_Broker_Unit</fullName>
    <filterScope>Queue</filterScope>
    <label>Dubai ( Broker )</label>
    <queue>Dubai_Broker</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>