MODON MRE BPDEV/force-app/main/default/objects/Unit__c/listViews/Finance_List_View.listView-meta.xml
<ListView>
    <fullName>Finance_List_View</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>BasePrice__c</columns>
    <columns>FacadeType__c</columns>
    <columns>TotalGFAsqm__c</columns>
    <columns>GroundFloorArea__c</columns>
    <columns>NumberofBedrooms__c</columns>
    <columns>Phase__c</columns>
    <columns>Project_Name__c</columns>
    <columns>TotalPrice__c</columns>
    <columns>PlotNo__c</columns>
    <columns>PlotAreasqm__c</columns>
    <filterScope>Everything</filterScope>
    <label>Finance List View</label>
    <sharedTo>
        <group>Finance_Team</group>
    </sharedTo>
</ListView>