MODON MRE BPDEV/force-app/main/default/objects/Unit__c/listViews/International_Broker_Unit.listView-meta.xml
<ListView>
    <fullName>International_Broker_Unit</fullName>
    <filterScope>Queue</filterScope>
    <label>International Broker</label>
    <queue>International_Broker</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>