MODON MRE BPDEV/force-app/main/default/objects/Unit__c/listViews/Reem_Hills.listView-meta.xml
<ListView>
    <fullName>Reem_Hills</fullName>
    <columns>NAME</columns>
    <columns>View__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Name__c</field>
        <operation>contains</operation>
        <value>Reem</value>
    </filters>
    <label>Reem Hills</label>
</ListView>