MODON MRE BPDEV/force-app/main/default/objects/Unit__c/listViews/Top_10_Abu_Dhabi_Broker_Unit.listView-meta.xml
<ListView>
    <fullName>Top_10_Abu_Dhabi_Broker_Unit</fullName>
    <filterScope>Queue</filterScope>
    <label>Top 10 ( Abu Dhabi Broker)</label>
    <queue>Top_10_Abu_Dhabi_Broker</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>