MODON MRE BPDEV/force-app/main/default/objects/Unit__c/listViews/Voided_Cancelled_Units_RasEl_Hekma_Only.listView-meta.xml
<ListView>
    <fullName>Voided_Cancelled_Units_RasEl_Hekma_Only</fullName>
    <columns>NAME</columns>
    <columns>ApprovalStatus__c</columns>
    <columns>Status__c</columns>
    <columns>Sub_Status__c</columns>
    <columns>BlockedFor__c</columns>
    <columns>BlockedBy__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source_Entity__c</field>
        <operation>equals</operation>
        <value>Modon - Egypt</value>
    </filters>
    <filters>
        <field>ApprovalStatus__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <filters>
        <field>RejectionComment__c</field>
        <operation>equals</operation>
        <value>Sales Order Cancelled/Voided</value>
    </filters>
    <label>Voided-Cancelled Units(RasEl Hekma Only)</label>
    <sharedTo>
        <group>Modon_Egypt_Sales_Order_Access</group>
    </sharedTo>
</ListView>