MODON MRE BPDEV/force-app/main/default/objects/Unit__c/listViews/VVIP_Unit.listView-meta.xml
<ListView>
    <fullName>VVIP_Unit</fullName>
    <filterScope>Queue</filterScope>
    <label>VVIP</label>
    <queue>VVIP</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>