MODON MRE BPDEV/force-app/main/default/objects/Unit__c/listViews/Wahida_s_Units.listView-meta.xml
<ListView>
    <fullName>Wahida_s_Units</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BlockedFor__c</field>
        <operation>equals</operation>
        <value>Wahida Karama</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Available</value>
    </filters>
    <label>Wahida&apos;s Units</label>
    <sharedTo>
        <role>Senior_Operations_Associate</role>
    </sharedTo>
</ListView>